<resources>
    <string name="app_name">Mirror Host</string>
    <string name="title_devices">Devices</string>
    <string name="title_live">Live</string>
    <string name="title_map">Map</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_settings">Settings</string>
    <string name="add_device">Add Device</string>
    <string name="device_connected">Connected</string>
    <string name="device_disconnected">Disconnected</string>
    <string name="record">Record</string>
    <string name="snapshot">Snapshot</string>
    <string name="listen">Listen</string>
    <string name="current_location">Current Location</string>
    <string name="download">Download</string>
    <string name="video_quality">Video Quality</string>
    <string name="about">About</string>
</resources>
