<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_devices"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_devices" />

    <item
        android:id="@+id/navigation_live"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/title_live" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/title_gallery" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/title_settings" />

</menu>
